// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CircleButton renders correctly with minimum props 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    focusable={true}
    hitSlop={
      {
        "bottom": 10,
        "left": 10,
        "right": 10,
        "top": 10,
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
          },
          {
            "backgroundColor": "#1AB775",
          },
          {
            "borderWidth": 0,
          },
          {
            "borderColor": "#1AB775",
            "borderRadius": 25,
            "height": 50,
            "width": 50,
          },
        ],
        {
          "opacity": 1,
        },
      ]
    }
  >
    <svg
      height={20}
      style={{}}
      testID="Times"
      viewBox="0 0 16 16"
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M13.9999 2.00146L1.99994 14.0015"
        stroke="#FFFFFF"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2}
        style={{}}
      />
      <path
        d="M1.99994 2.00146L13.9999 14.0015"
        stroke="#FFFFFF"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2}
        style={{}}
      />
    </svg>
  </View>
</View>
`;

exports[`CircleButton when given optional props renders correctly 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      },
      {
        "flexDirection": "column",
      },
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    focusable={true}
    hitSlop={
      {
        "bottom": 10,
        "left": 10,
        "right": 10,
        "top": 10,
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
          },
          {
            "backgroundColor": "transparent",
          },
          {
            "borderWidth": 3,
          },
          {
            "borderColor": "#333333",
            "borderRadius": 25,
            "height": 50,
            "width": 50,
          },
        ],
        {
          "opacity": 1,
        },
      ]
    }
  >
    <svg
      height={20}
      style={{}}
      testID="Times"
      viewBox="0 0 16 16"
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M13.9999 2.00146L1.99994 14.0015"
        stroke="#333333"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2}
        style={{}}
      />
      <path
        d="M1.99994 2.00146L13.9999 14.0015"
        stroke="#333333"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2}
        style={{}}
      />
    </svg>
  </View>
</View>
`;
